themes/devan/source/css/home.styl
#home
  p
    margin: 1em 0 1em

  hr
    margin-bottom: 20px
    border: none
    height: 1px
    background-color: color-border

  #latest
    display: flex
    flex-wrap: wrap
    
    div
      flex: 0 100%
      @media mq-normal
        flex: 0 50%
    
      hr
        margin-bottom: 20px
        border: none
        height: 1px
        background-color: color-border
        @media mq-normal
          display: none

.component
  margin: 5px
  a
    .description
      color: darken(color-default, 25)
    border: 2px solid color-background-alt
    border-radius: 3px
    margin: 10px 0
    padding: 5px
    display: block
    color: color-default
    transition: background-color .2s ease
    &:hover
      text-decoration: none
      background-color: color-background-alt
    time
      color: color-orange
      font-size: .9em
  .tag
      color: color-orange
      font-size: .9em
      border: 1px solid black;
      border-radius: 5px;
      background-color: #333;
      padding: 0 5px;

